// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortingItem render correctly SortingItem isActive 1`] = `
<li
  className="places__option places__option--active"
  onClick={[Function]}
  tabIndex="0"
/>
`;

exports[`SortingItem render correctly SortingItem no active 1`] = `
<li
  className="places__option "
  onClick={[Function]}
  tabIndex="0"
/>
`;
